applications/my-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: applications
  labels:
    app.kubernetes.io/name: my-app
    owner: platform-team
    env: dev
    cost-center: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: my-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: my-app
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: my-app
          image: ghcr.io/kse-cicd-justmiroslav/my-app:578b5aea92261600ee9536e91c10b7791ee27b39
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
