applications/my-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: applications
  labels:
    app.kubernetes.io/name: my-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: my-app
